--- a/kindlepocket-web/src/main/resources/static/binding.html
+++ b/kindlepocket-web/src/main/resources/static/binding.html
@@ -19,7 +19,7 @@
 <script src="/js/application.js"></script>
 <script src="/js/angular-1.3.0.js"></script>
 <script src="/js/angular-ui-router.js"></script>
-<script src="/js/binding.js"></script>
+<script src="/js/app/binding.js"></script>
 
 <body>
 
@@ -28,7 +28,7 @@
         <div class="login-form" ng-controller="formController">
 
             <div class="form-group">
-                <input type="text" class="form-control login-field" value="${subscriberOpenId}" placeholder="请输入手机号" id="binding-phone" ng-model="bindingData.phone"/>
+                <input type="text" class="form-control login-field" value="${subscriberOpenId}" placeholder="请输入手机号" id="binding-phone" ng-model="bindingData.phone" required/>
                 <label class="login-field-icon fui-user" for="binding-phone"></label>
             </div>
 
