--- a/kindlepocket-web/src/main/resources/static/html/binding.html
+++ b/kindlepocket-web/src/main/resources/static/html/binding.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="binding" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" ng-app="binding">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>Kindle Binding</title>
 </head>
 
 <!-- Loading Bootstrap -->
-<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 
 <!-- Loading Flat UI -->
-<link href="/css/flat-ui.css" rel="stylesheet" />
+<link href="/css/flat-ui.css" rel="stylesheet"/>
 
-<link href="/imgs/favicon.ico" rel="shortcut icon" />
+<link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/flat-ui.min.js"></script>
@@ -21,37 +21,93 @@
 <script src="/js/angular-ui-router.js"></script>
 <script src="/js/app/binding.js"></script>
 
+<style>
+      body {
+       <!-- min-height: 2000px;-->
+        width: 100%;
+        height:100%;
+        overflow-x: hidden;
+      }
+
+      .navbar-static-top {
+        margin-bottom: 19px;
+      }
+
+
+</style>
+
+
 <body>
 
-<div class="login">
-   <!-- <div class="login-screen">-->
-        <div class="login-form" ng-controller="formController">
 
-            <div class="form-group">
-                <input type="text" class="form-control login-field" value="${subscriberOpenId}" placeholder="请输入手机号" id="binding-phone" ng-model="bindingData.phone" required/>
-                <label class="login-field-icon fui-user" for="binding-phone"></label>
-            </div>
-
-            <div class="form-group">
-                <input type="email" class="form-control login-field" value="" placeholder="请输入个人邮箱" id="binding-email" ng-model="bindingData.email"/>
-                <label class="login-field-icon fui-mail" for="binding-email"></label>
-            </div>
-
-            <div class="form-group">
-                <input type="password" class="form-control login-field" value="" placeholder="请输入个人邮箱密码或授权码" id="binding-emailPwd" ng-model="bindingData.emailPwd"/>
-                <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
-            </div>
-
-            <div class="form-group">
-                <input type="email" class="form-control login-field" value="" placeholder="请输入kindle邮箱" id="binding-kindleEmail" ng-model="bindingData.kindleEmail"/>
-                <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
-            </div>
-
-
-            <a class="btn btn-primary btn-lg btn-block" href="#" ng-click="submitForm()">绑定！</a>
-            <a class="login-link" href="#">Any problem ?</a>
+<div class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+            </button>
+            <a class="navbar-brand" href="#">Kindle Pocket</a>
         </div>
-   <!-- </div>-->
+        <div class="navbar-collapse collapse">
+            <!-- <ul class="nav navbar-nav">
+                 <li class="active"><a href="#">Home</a></li>
+                 <li><a href="#about">About</a></li>
+                 <li><a href="#contact">Contact</a></li>
+                 <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                     <ul class="dropdown-menu">
+                         <li><a href="#">Action</a></li>
+                         <li><a href="#">Another action</a></li>
+                         <li><a href="#">Something else here</a></li>
+                         <li class="divider"></li>
+                         <li class="dropdown-header">Nav header</li>
+                         <li><a href="#">Separated link</a></li>
+                         <li><a href="#">One more separated link</a></li>
+                     </ul>
+                 </li>
+             </ul>-->
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">登陆</a></li>
+                <!--<li class="active"><a href="./">Static top</a></li>
+                <li><a href="../navbar-fixed-top/">Fixed top</a></li>-->
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</div>
+
+<div class="login">
+    <!-- <div class="login-screen">-->
+    <div class="login-form" ng-controller="formController">
+
+        <div class="form-group">
+            <input type="text" class="form-control login-field" value="" placeholder="请输入手机号"
+                   id="binding-phone" ng-model="bindingData.phone" required/>
+            <label class="login-field-icon fui-user" for="binding-phone"></label>
+        </div>
+
+        <div class="form-group">
+            <input type="email" class="form-control login-field" value="" placeholder="请输入个人邮箱" id="binding-email"
+                   ng-model="bindingData.email"/>
+            <label class="login-field-icon fui-mail" for="binding-email"></label>
+        </div>
+
+        <div class="form-group">
+            <input type="password" class="form-control login-field" value="" placeholder="请输入个人邮箱密码或授权码"
+                   id="binding-emailPwd" ng-model="bindingData.emailPwd"/>
+            <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
+        </div>
+
+        <div class="form-group">
+            <input type="email" class="form-control login-field" value="" placeholder="请输入kindle邮箱"
+                   id="binding-kindleEmail" ng-model="bindingData.kindleEmail"/>
+            <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
+        </div>
+
+
+        <a class="btn btn-primary btn-lg btn-block" href="#" ng-click="submitForm()">绑定！</a>
+        <a class="login-link" href="#">Any problem ?</a>
+    </div>
+    <!-- </div>-->
 </div>
 
 </body>
