--- a/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
+++ b/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="binding">
+<html lang="en" ng-app="infoUpdate">
 
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>Kindle Binding</title>
+    <title>info update</title>
 </head>
 
 <!-- Loading Bootstrap -->
@@ -20,7 +20,7 @@
 <script src="/js/application.js"></script>
 <script src="/js/angular-1.3.0.js"></script>
 <script src="/js/angular-ui-router.js"></script>
-<script src="/js/app/binding.js"></script>
+<script src="/js/app/infoUpdate.js"></script>
 
 <style>
       body {
@@ -46,7 +46,7 @@
 </script>
 
 
-<body>
+<body ng-controller="infoUpdateController">
 
 
 <div class="navbar navbar-default navbar-static-top" role="navigation">
@@ -76,7 +76,7 @@
                  </li>
              </ul>-->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登陆</a></li>
+                <li><a href="#">{{subscriberData.userName}}</a></li>
                 <!--<li class="active"><a href="./">Static top</a></li>
                 <li><a href="../navbar-fixed-top/">Fixed top</a></li>-->
             </ul>
@@ -86,11 +86,11 @@
 
 <div class="login">
     <!-- <div class="login-screen">-->
-    <form class="login-form" name="bindingForm" ng-controller="formController" novalidate ng-submit="submitForm()">
+    <form class="login-form" name="bindingForm"  novalidate ng-submit="updateInfo()">
 
         <div class="form-group">
-            <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入手机号"
-                   id="binding-phone" name="phone" ng-model="bindingData.phone" ng-minlength="11" ng-maxlength="11"
+            <input type="text" class="form-control login-field tooltip-hide"  placeholder="请输入手机号"
+                   id="binding-phone" name="phone" ng-model="subscriberData.phone" ng-minlength="11" ng-maxlength="11"
                    required data-placement="top" data-toggle="tooltip"
                    title="手机号是日后网页端应用上线后，绑定您的账号的凭证之一，但请放心填写，我们不会通过短信打扰您; 手机号长度11位，请不要输错"/>
             <label class="login-field-icon fui-user" for="binding-phone"></label>
@@ -98,36 +98,36 @@
 
         <div class="form-group">
             <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入用户名"
-                   id="binding-userName" name="userName" ng-model="bindingData.userName" ng-minlength="5" ng-maxlength="20"
+                   id="binding-userName" name="userName" ng-model="subscriberData.userName" ng-minlength="5" ng-maxlength="20"
                    required data-placement="top" data-toggle="tooltip"
                    title="起个用户名，听起来不错;用户名长度：5 ~ 20 位"/>
             <label class="login-field-icon fui-user" for="binding-userName"></label>
         </div>
 
         <div class="form-group">
-            <input type="email" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱"
+            <input type="email" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱"
                    id="binding-email" name="email"
-                   ng-model="bindingData.email" required data-placement="top" data-toggle="tooltip"
+                   ng-model="subscriberData.email" required data-placement="top" data-toggle="tooltip"
                    title="我们将会通过您的个人邮箱给您的kindle推送书籍; 邮箱地址格式: example@163.com"/>
             <label class="login-field-icon fui-mail" for="binding-email"></label>
         </div>
 
         <div class="form-group">
-            <input type="password" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱密码或授权码"
+            <input type="password" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱密码或授权码"
                    name="emailPwd"
-                   id="binding-emailPwd" ng-model="bindingData.emailPwd" required data-placement="top"
+                   id="binding-emailPwd" ng-model="subscriberData.emailPwd" required data-placement="top"
                    data-toggle="tooltip" title="请放心，密码不会泄露，当然授权码听起来似乎更安全一些"/>
             <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
         </div>
 
         <div class="form-group">
-            <input type="email" class="form-control login-field  tooltip-hide" value="" placeholder="请输入kindle邮箱"
-                   id="binding-kindleEmail" name="kindleEmail" ng-model="bindingData.kindleEmail" required
+            <input type="email" class="form-control login-field  tooltip-hide" placeholder="请输入kindle邮箱"
+                   id="binding-kindleEmail" name="kindleEmail" ng-model="subscriberData.kindleEmail" required
                    data-placement="top" data-toggle="tooltip"
                    title="您可以在kindle设备的「设置」-「设备选项」-「个性化您的kindle」中找到您的个人kindle设备邮箱地址">
             <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
         </div>
-        <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">绑定！</button>
+        <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">更新信息！</button>
         <a class="login-link" href="#">Any problem ?</a>
 
     </form>
