--- a/kindlepocket-web/src/main/resources/static/html/binding.html
+++ b/kindlepocket-web/src/main/resources/static/html/binding.html
@@ -15,12 +15,12 @@
 
 <link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
-<script src="/js/jquery.min.js"></script>
-<script src="/js/flat-ui.min.js"></script>
-<script src="/js/application.js"></script>
-<script src="/js/angular-1.3.0.js"></script>
-<script src="/js/angular-ui-router.js"></script>
-<script src="/js/app/binding.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/flat-ui.min.js"></script>
+<script src="/js/lib/application.js"></script>
+<script src="/js/lib/angular-1.3.0.js"></script>
+<script src="/js/lib/angular-ui-router.js"></script>
+<script src="/js/controller/bindingController.js"></script>
 
 <style>
       body {
