--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -6,16 +6,16 @@
 <title>Kindle Pocket</title>
 
 <!-- Loading Bootstrap -->
-<link th:href="@{/css/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
+<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
 <!-- Loading Flat UI -->
-<link th:href="@{/css/flat-ui.css}" rel="stylesheet" />
+<link href="/css/flat-ui.css" rel="stylesheet" />
 
-<link th:href="@{/imgs/favicon.ico}" rel="shortcut icon" />
+<link href="/imgs/favicon.ico" rel="shortcut icon" />
 
-<script th:src="@{/js/jquery.min.js}"></script>
-<script th:src="@{/js/flat-ui.min.js}"></script>
-<script th:src="@{/js/application.js}"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/flat-ui.min.js"></script>
+<script src="/js/application.js"></script>
 
 </head>
 <body>
