--- a/kindlepocket-web/src/main/resources/static/html/index.html
+++ b/kindlepocket-web/src/main/resources/static/html/index.html
@@ -12,9 +12,9 @@
 
 <link href="/imgs/favicon.ico" rel="shortcut icon" />
 
-<script src="/js/jquery.min.js"></script>
-<script src="/js/flat-ui.min.js"></script>
-<script src="/js/application.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/flat-ui.min.js"></script>
+<script src="/js/lib/application.js"></script>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
 <!--[if lt IE 9]>
