--- a/kindlepocket-web/src/main/resources/static/html/binding.html
+++ b/kindlepocket-web/src/main/resources/static/html/binding.html
@@ -21,6 +21,7 @@
 <script src="/js/lib/angular-1.3.0.js"></script>
 <script src="/js/lib/angular-ui-router.js"></script>
 <script src="/js/controller/bindingController.js"></script>
+<script src="/js/services/request.js"></script>
 
 <style>
       body {
@@ -40,7 +41,7 @@
       $(function () {
         $('[data-toggle=tooltip]').tooltip();
 
-        //ensure the tooltip will not display immediatly when the page opened.
+        //ensure the tooltip will not display immediately when the page opened.
         $('.tooltip-hide').tooltip('hide');
       });
 </script>
@@ -58,27 +59,8 @@
             <a class="navbar-brand" href="#">Kindle Pocket</a>
         </div>
         <div class="navbar-collapse collapse">
-            <!-- <ul class="nav navbar-nav">
-                 <li class="active"><a href="#">Home</a></li>
-                 <li><a href="#about">About</a></li>
-                 <li><a href="#contact">Contact</a></li>
-                 <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                         <li><a href="#">Action</a></li>
-                         <li><a href="#">Another action</a></li>
-                         <li><a href="#">Something else here</a></li>
-                         <li class="divider"></li>
-                         <li class="dropdown-header">Nav header</li>
-                         <li><a href="#">Separated link</a></li>
-                         <li><a href="#">One more separated link</a></li>
-                     </ul>
-                 </li>
-             </ul>-->
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">登陆</a></li>
-                <!--<li class="active"><a href="./">Static top</a></li>
-                <li><a href="../navbar-fixed-top/">Fixed top</a></li>-->
             </ul>
         </div><!--/.nav-collapse -->
     </div>
