--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -1,137 +1,111 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" ng-app="details">
 
-<meta content="text/html;charset=utf-8" />
-<title>Kindle Pocket</title>
+<head>
+	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+	<title>TextBook Preview</title>
+</head>
 
 <!-- Loading Bootstrap -->
-<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 
 <!-- Loading Flat UI -->
-<link href="/css/flat-ui.css" rel="stylesheet" />
+<link href="/css/flat-ui.css" rel="stylesheet"/>
 
-<link href="/imgs/favicon.ico" rel="shortcut icon" />
+<link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
 <script src="/js/lib/jquery.min.js"></script>
 <script src="/js/lib/flat-ui.min.js"></script>
-<script src="/js/application.js"></script>
+<script src="/js/lib/application.js"></script>
+<script src="/js/lib/angular-1.3.0.js"></script>
+<script src="/js/lib/angular-ui-router.js"></script>
+<script src="/js/controller/detailController.js"></script>
+<script src="/js/services/detailService.js"></script>
 
-</head>
-<body>
-	<style>
-body {
-	min-height: 2000px;
-	padding-top: 70px;
-	background-color: gainsboro;
-}
+<style>
+      body {
+       <!-- min-height: 2000px;-->
+        width: 100%;
+        height:100%;
+        overflow-x: hidden;
+      }
 
-.container {
-	margin-top: 20px;
-}
+      .navbar-static-top {
+        margin-bottom: 19px;
+      }
 
-#sendToKindleBtn {
-	margin-left: 80px;
-}
-
-#sendToOtherEmailsBtn {
-	margin-left:10px;
-}
 </style>
 
-	<nav
-		class="navbar navbar-inverse navbar-lg navbar-embossed navbar-fixed-top"
-		role="navigation">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse"
-					data-target="#navbar-collapse-9">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Kindle Pocket</a>
-			</div>
-			<div class="navbar-collapse collapse" id="navbar-collapse-9">
-				<form class="navbar-form navbar-right" role="form">
-					<div class="form-group">
-						<input type="text" placeholder="Email" class="form-control" />
-					</div>
-					<div class="form-group">
-						<input type="password" placeholder="Password" class="form-control" />
-					</div>
-					<button type="submit" class="btn btn-success">Sign in</button>
-					<button type="submit" class="btn btn-danger">Register</button>
-				</form>
-
-			</div>
-			<!--/.navbar-collapse -->
-		</div>
-	</nav>
+<body>
 
 
+<div class="navbar navbar-default navbar-static-top" role="navigation">
 	<div class="container">
-		<h4>Search Results</h4>
-		<div class="row">
-			<div class="col-sm-6 col-md-4">
-				<div class="todo">
-					<div class="todo-search">
-						<input class="todo-search-field" type="search" value=""
-							placeholder="Search" />
-					</div>
-					<ul>
-						<li class="todo-done">
-							<div class="todo-icon fui-user"></div>
-							<div class="todo-content">
-								<h4 class="todo-name">
-									Meet <strong>Adrian</strong> at <strong>6pm</strong>
-								</h4>
-								Times Square
-							</div>
-						</li>
-						<li>
-							<div class="todo-icon fui-list"></div>
-							<div class="todo-content">
-								<h4 class="todo-name">
-									Chat with <strong>V.Kudinov</strong>
-								</h4>
-								Skype conference an 9 am
-							</div>
-						</li>
-						<li>
-							<div class="todo-icon fui-eye"></div>
-							<div class="todo-content">
-								<h4 class="todo-name">
-									Watch <strong>Iron Man</strong>
-								</h4>
-								1998 Broadway
-							</div>
-						</li>
-						<li>
-							<div class="todo-icon fui-time"></div>
-							<div class="todo-content">
-								<h4 class="todo-name">
-									Fix bug on a <strong>Website</strong>
-								</h4>
-								As soon as possible
-							</div>
-						</li>
-					</ul>
-				</div>
-				<!-- /.todo -->
-			</div>
-			<!-- /.col-md-4 -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+			</button>
+			<a class="navbar-brand" href="#">Kindle Pocket</a>
 		</div>
-		<!-- /.row -->
-
-		<button id="sendToKindleBtn" type="button"
-			class="btn btn-primary btn-sm">Send to Kindle</button>
-		<button id="sendToOtherEmailsBtn" type="button"
-			class="btn btn-primary btn-sm">Send to Other Emails</button>
-
+		<div class="navbar-collapse collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">登陆</a></li>
+			</ul>
+		</div><!--/.nav-collapse -->
 	</div>
-	<!-- /.container -->
-	<!-- /container -->
+</div>
+
+<div class="container-fluid" ng-controller="detailController" data-ng-init="getDetails()">
+	<div class="row" align="center">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="thumbnail">
+				<img src="/imgs/favicon.ico" alt="#">
+				<div>
+					<p>{{details.title}}</p>
+					<p>author: {{details.author}}</p>
+					<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row" align="center">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="thumbnail">
+				<img src="/imgs/favicon.ico" alt="#">
+				<div>
+					<p>{{details.title}}</p>
+					<p>author: {{details.author}}</p>
+					<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div align="center">
+		<ul class="pagination">
+			<li class="previous"><a href="#fakelink" class="fui-arrow-left"></a></li>
+			<li class="active"><a href="#">1</a></li>
+			<li><a href="#">2</a></li>
+			<li><a href="#">3</a></li>
+			<li><a href="#">4</a></li>
+			<li><a href="#">5</a></li>
+			<li class="pagination-dropdown dropup">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<i class="fui-triangle-up"></i>
+				</a>
+				<ul class="dropdown-menu">
+					<li><a href="#">10–20</a></li>
+					<li><a href="#">20–30</a></li>
+					<li><a href="#">40–50</a></li>
+				</ul>
+			</li>
+			<li class="next"><a href="#" class="fui-arrow-right"></a></li>
+		</ul>
+	</div>
+	<!-- </div>-->
+</div>
 
 
 </body>
