--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -75,12 +75,12 @@
 	<div align="center">
 		<ul class="pagination">
 			<li class="previous"><a href="#fakelink" class="fui-arrow-left"></a></li>
-			<li class="active"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-			<li><a href="#">5</a></li>
-			<li class="pagination-dropdown dropup">
+			<li class="active"><a ng-click="pagination(1,8)">1</a></li>
+			<li><a ng-click="pagination(2,8)">2</a></li>
+			<li><a ng-click="pagination(3,8)">3</a></li>
+			<li><a ng-click="pagination(4,8)">4</a></li>
+			<li><a ng-click="pagination(5,8)">5</a></li>
+			<!--<li class="pagination-dropdown dropup">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 					<i class="fui-triangle-up"></i>
 				</a>
@@ -89,7 +89,7 @@
 					<li><a href="#">20–30</a></li>
 					<li><a href="#">40–50</a></li>
 				</ul>
-			</li>
+			</li>-->
 			<li class="next"><a href="#" class="fui-arrow-right"></a></li>
 		</ul>
 	</div>
