[nasuf]modify the logic when subscribe/bind/unsubscribe info

--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -65,6 +65,8 @@
 					<div>
 						<p>{{detail.title}}</p>
 						<p>author: {{detail.author}}</p>
+						<p>size: {{detail.size}}</p>
+						<p>format: {{detail.format}}</p>
 						<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
 					</div>
 				</div>
