--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -67,7 +67,7 @@
 						<p>author: {{detail.author}}</p>
 						<p>size: {{detail.size}}</p>
 						<p>format: {{detail.format}}</p>
-						<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
+						<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
 					</div>
 				</div>
 			</div>
