--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -67,7 +67,10 @@
 						<p>author: {{detail.author}}</p>
 						<p>size: {{detail.size}}</p>
 						<p>format: {{detail.format}}</p>
-						<p class="col-sm-offset-4"><a href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</a> <a href="#" class="btn btn-default" role="button">Preview</a></p>
+						<p class="col-sm-offset-4">
+							<button data-toggle="modal" data-target="#mailList" href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</button>
+							<button href="#" class="btn btn-default" role="button">Preview</button>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -82,21 +85,28 @@
 			<li><a ng-click="pagination(3,8)">3</a></li>
 			<li><a ng-click="pagination(4,8)">4</a></li>
 			<li><a ng-click="pagination(5,8)">5</a></li>
-			<!--<li class="pagination-dropdown dropup">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<i class="fui-triangle-up"></i>
-				</a>
-				<ul class="dropdown-menu">
-					<li><a href="#">10–20</a></li>
-					<li><a href="#">20–30</a></li>
-					<li><a href="#">40–50</a></li>
-				</ul>
-			</li>-->
 			<li class="next"><a href="#" class="fui-arrow-right"></a></li>
 		</ul>
 	</div>
-	<!-- </div>-->
 </div>
+
+<div class="modal fade" role="dialog" id="mailList" aria-labelledby="gridSystemModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<!--<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="gridSystemModalLabel">Modal title</h4>
+			</div>-->
+			<div class="modal-body">
+				BODY
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 
 </body>
