--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -8,22 +8,18 @@
 </head>
 
 <!-- Loading Bootstrap -->
-<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-
-<!-- Loading Flat UI -->
-<link href="/css/flat-ui.css" rel="stylesheet"/>
+<link href="/css/materialize.min.css" rel="stylesheet"/>
 
 <link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
 <script src="/js/lib/jquery.min.js"></script>
-<script src="/js/lib/flat-ui.min.js"></script>
-<script src="/js/lib/application.js"></script>
+<script src="/js/lib/materialize.min.js"></script>
 <script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/lib/angular-ui-router.js"></script>
 <script src="/js/controller/detailController.js"></script>
 <script src="/js/services/detailService.js"></script>
 
 <style>
+
       body {
        <!-- min-height: 2000px;-->
         width: 100%;
@@ -31,55 +27,128 @@
         overflow-x: hidden;
       }
 
-      .navbar-static-top {
-        margin-bottom: 19px;
-      }
-
-      @-moz-document url-prefix() {
-  		fieldset { display: table-cell; }
-	   }
-
 </style>
+
+<script>
+
+</script>
 
 <body>
 
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-			</button>
-			<a class="navbar-brand" href="#">Kindle Pocket</a>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">登陆</a></li>
-			</ul>
-		</div><!--/.nav-collapse -->
-	</div>
-</div>
+<main>
+	<div class="container" ng-controller="detailController" data-ng-init="getDetails()">
+		<div ng-repeat="detail in details">
+			<div class="col s12 m7">
+				<!--<h2 class="header">Horizontal Card</h2>-->
+				<div class="card horizontal">
+					<div class="card-image">
+						<img src="http://lorempixel.com/100/190/nature/10">
+					</div>
+					<div class="card-stacked">
+						<div class="card-content">
+							<b><font size="3px">{{detail.title}}</font></b><br/>
+							<p>
+								作者：{{detail.author}} &nbsp;&nbsp;&nbsp;
+								大小：{{detail.size}}
+							</p>
+							<p>
+								格式：{{detail.format}} &nbsp;&nbsp;&nbsp;
+								发送次数：{{detail.kindleMailTimes}}
+							</p>
+						</div>
+						<div class="card-action">
+							<a href="###" ng-click="sendMail(detail.id)">Send To Kindle</a>
+							<a href="###">Preview</a>
+<!--
+							<div class="preloader-wrapper small active">
+								<div class="spinner-layer spinner-blue">
+									<div class="circle-clipper left">
+										<div class="circle"></div>
+									</div><div class="gap-patch">
+									<div class="circle"></div>
+								</div><div class="circle-clipper right">
+									<div class="circle"></div>
+								</div>
+								</div>
 
-<div class="container-fluid" ng-controller="detailController" data-ng-init="getDetails()">
-	<!--<div ng-repeat="detail in details">
-		<div class="row" align="center">
-			<div class="col-md-8 col-md-offset-2">
-				<div class="thumbnail">
-					&lt;!&ndash;<img src="/imgs/favicon.ico" alt="#">&ndash;&gt;
-					<div>
-						<p>{{detail.title}}</p>
-						<p>author: {{detail.author}}</p>
-						<p>size: {{detail.size}}</p>
-						<p>format: {{detail.format}}</p>
-						<p class="col-sm-offset-4">
-							<button href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</button>
-							<button href="#" class="btn btn-default" role="button">Preview</button>
-						</p>
+								<div class="spinner-layer spinner-red">
+									<div class="circle-clipper left">
+										<div class="circle"></div>
+									</div><div class="gap-patch">
+									<div class="circle"></div>
+								</div><div class="circle-clipper right">
+									<div class="circle"></div>
+								</div>
+								</div>
+
+								<div class="spinner-layer spinner-yellow">
+									<div class="circle-clipper left">
+										<div class="circle"></div>
+									</div><div class="gap-patch">
+									<div class="circle"></div>
+								</div><div class="circle-clipper right">
+									<div class="circle"></div>
+								</div>
+								</div>
+
+								<div class="spinner-layer spinner-green">
+									<div class="circle-clipper left">
+										<div class="circle"></div>
+									</div><div class="gap-patch">
+									<div class="circle"></div>
+								</div><div class="circle-clipper right">
+									<div class="circle"></div>
+								</div>
+								</div>
+							</div>-->
+
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>-->
+
+
+		<!-- pagination -->
+		<div align="center">
+			<ul class="pagination">
+				<li class="disabled"><a href="#!"><i class="material-icons">Pre</i></a></li>
+				<li class="active"><a href="#!" ng-click="pagination(1,8)">1</a></li>
+				<li class="waves-effect"><a href="#!" ng-click="pagination(2,8)">2</a></li>
+				<li class="waves-effect"><a href="#!" ng-click="pagination(3,8)">3</a></li>
+				<li class="waves-effect"><a href="#!" ng-click="pagination(4,8)">4</a></li>
+				<li class="waves-effect"><a href="#!" ng-click="pagination(5,8)">5</a></li>
+				<li class="waves-effect"><a href="#!"><i class="material-icons">Next</i></a></li>
+			</ul>
+		</div>
+
+	</div>
+
+</main>
+		<!--<div class="row">
+			<div class="col s12 m9 l10">
+				<div id="structure" class="section scrollspy">
+					<a href="#" data-activates="slide-out" class="btn button-collapse">Side nav demo</a>
+					<ul id="slide-out" class="side-nav fixed">
+						<li><div class="userView">
+							<img class="background" src="/imgs/office.jpg">
+							<a href="#!user"><img class="circle" src="/imgs/yuna.jpg"></a>
+							<a href="#!name"><span class="white-text name">John Doe</span></a>
+							<a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+						</div></li>
+						<li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+						<li><a href="#!">Second Link</a></li>
+						<li><div class="divider"></div></li>
+						<li><a class="subheader">Subheader</a></li>
+						<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>-->
+
+
+<!--<div class="container-fluid" ng-controller="detailController" data-ng-init="getDetails()">
 	<div class="table-responsive">
 		<div ng-repeat="detail in details">
 			<div class="panel panel-success">
@@ -93,18 +162,6 @@
 						格式：{{detail.format}} &nbsp;&nbsp;&nbsp;
 						发送次数：{{detail.kindleMailTimes}}
 					</p>
-					<!--<div class="table-responsive">
-						<table class="table table-condensed">
-							<tr>
-								<td>作者：{{detail.author}}</td>
-								<td>大小：{{detail.size}}</td>
-							</tr>
-							<tr>
-								<td>格式：{{detail.format}}</td>
-								<td>发送次数：{{detail.kindleMailTimes}}</td>
-							</tr>
-						</table>
-					</div>-->
 				</div>
 				<div class="panel-footer" align="right">
 					<button href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</button>
@@ -124,20 +181,6 @@
 			<li><a ng-click="pagination(5,8)">5</a></li>
 			<li class="next"><a href="#" class="fui-arrow-right"></a></li>
 		</ul>
-	</div>
-</div>
-
-<!--<div class="modal fade" role="dialog" id="mailList" aria-labelledby="gridSystemModalLabel">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-body">
-				BODY
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
-			</div>
-		</div>
 	</div>
 </div>-->
 
