--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -45,18 +45,14 @@
 		$('.modal-trigger').leanModal();
 	 });
 
-	  $(document).ready(function() {
-		$('input#input_text, textarea#textarea1').characterCounter();
-	  });
+	var closeFAB = function(){
+		//$('.fixed-action-btn').closeFAB();
+	}
 
-	  var closeFAB = function() {
-	  	alert("blur");
-	  	$('.fixed-action-btn').closeFAB();
-	  }
 
 </script>
 
-<body class="green lighten-5">
+<body class="green lighten-5" ng-controller="detailController">
 
 <!--<div class="carousel">
 	<a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
@@ -67,7 +63,7 @@
 </div>-->
 
 <main>
-	<div class="container" ng-controller="detailController" data-ng-init="getDetails()">
+	<div class="container" data-ng-init="getDetails()">
 		<div ng-repeat="detail in details">
 			<div class="col s12 m7">
 				<!--<h2 class="header">Horizontal Card</h2>-->
@@ -133,77 +129,38 @@
 
 	</div>
 
-	<div class="fixed-action-btn click-to-toggle" style="bottom: 110px; right: 28px;">
-		<a id="floatBtn" class="btn-floating btn-middle red waves-effect z-depth-2" onblur="this.closeFAB()">
+	<div class="fixed-action-btn click-to-toggle" style="bottom: 110px; right: 28px;" onmouseleave="closeFAB()">
+		<a id="floatBtn" class="btn-floating btn-middle red waves-effect z-depth-2">
 			<i class="large material-icons">add</i>
 		</a>
 		<ul>
 			<li><a class="btn-floating yellow darken-1 z-depth-2"><i class="material-icons">settings</i></a></li>
 			<li><a class="btn-floating red  waves-effect z-depth-2"><i class="material-icons">message</i></a></li>
 			<li><a class="btn-floating green waves-effect z-depth-2"><i class="material-icons">search</i></a></li>
-			<li><a class="btn-floating blue waves-effect z-depth-2"><i class="material-icons">live_help</i></a></li>
+			<li><a class="btn-floating blue waves-effect z-depth-2 modal-trigger" href="#bottomModal"><i class="material-icons">live_help</i></a></li>
 		</ul>
 	</div>
 
-</main>
-		<!--<div class="row">
-			<div class="col s12 m9 l10">
-				<div id="structure" class="section scrollspy">
-					<a href="#" data-activates="slide-out" class="btn button-collapse">Side nav demo</a>
-					<ul id="slide-out" class="side-nav fixed">
-						<li><div class="userView">
-							<img class="background" src="/imgs/office.jpg">
-							<a href="#!user"><img class="circle" src="/imgs/yuna.jpg"></a>
-							<a href="#!name"><span class="white-text name">John Doe</span></a>
-							<a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-						</div></li>
-						<li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-						<li><a href="#!">Second Link</a></li>
-						<li><div class="divider"></div></li>
-						<li><a class="subheader">Subheader</a></li>
-						<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-					</ul>
-				</div>
+	<!-- Bottom Modal -->
+	<div id="bottomModal" class="modal bottom-sheet">
+		<div class="modal-content">
+			<h8>Any problems?  Please feel free to let me know.</h8>
+			<div class="row">
+				<form class="col s12">
+					<div class="row">
+						<div class="input-field col s12">
+							<textarea id="questions" class="materialize-textarea"></textarea>
+						</div>
+					</div>
+				</form>
 			</div>
-		</div>-->
-
-
-<!--<div class="container-fluid" ng-controller="detailController" data-ng-init="getDetails()">
-	<div class="table-responsive">
-		<div ng-repeat="detail in details">
-			<div class="panel panel-success">
-				<div class="panel-heading">{{detail.title}}</div>
-				<div class="panel-body">
-					<p>
-						作者：{{detail.author}} &nbsp;&nbsp;&nbsp;
-						大小：{{detail.size}}
-					</p>
-					<p>
-						格式：{{detail.format}} &nbsp;&nbsp;&nbsp;
-						发送次数：{{detail.kindleMailTimes}}
-					</p>
-				</div>
-				<div class="panel-footer" align="right">
-					<button href="#" class="btn btn-primary" role="button" ng-click="sendMail(detail.id)">Send to Kindle</button>
-					<button href="#" class="btn btn-default" role="button">Preview</button>
-				</div>
-			</div>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat" ng-click="sendProblems()">Send</a>
 		</div>
 	</div>
 
-	<div align="center">
-		<ul class="pagination">
-			<li class="previous"><a href="#fakelink" class="fui-arrow-left"></a></li>
-			<li class="active"><a ng-click="pagination(1,8)">1</a></li>
-			<li><a ng-click="pagination(2,8)">2</a></li>
-			<li><a ng-click="pagination(3,8)">3</a></li>
-			<li><a ng-click="pagination(4,8)">4</a></li>
-			<li><a ng-click="pagination(5,8)">5</a></li>
-			<li class="next"><a href="#" class="fui-arrow-right"></a></li>
-		</ul>
-	</div>
-</div>-->
-
+</main>
 
 </body>
 </html>
