--- a/kindlepocket-web/src/main/resources/static/html/binding.html
+++ b/kindlepocket-web/src/main/resources/static/html/binding.html
@@ -23,7 +23,7 @@
 <script src="/js/lib/angular-1.3.0.js"></script>
 <script src="/js/lib/jasny-bootstrap.min.js"></script>
 <script src="/js/controller/bindingController.js"></script>
-<script src="/js/services/request.js"></script>
+<script src="/js/services/requestService.js"></script>
 
 <style>
       body {
