update all components to vue.js, request with axios

--- a/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
+++ b/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
@@ -88,14 +88,10 @@ body {<!--
 					</div>
 					<button type="button" style="float: right; margin-right: 20px"
 						class="btn waves-effect waves-light black"
-						v-on:click="update()">
+						v-on:click="update">
 						<font color="white">更新</font>
 					</button>
 				</form>
-			</div>
-			<!-- register form end -->
-			<div v-if="updatedFlag == true">
-				<p align="center"><font color="green">更新成功！</font></p>
 			</div>
 		</div>
 	</div>
