--- a/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
+++ b/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="info">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>TextBook Preview</title>
+    <title>User Info</title>
 </head>
 
 <!-- Loading Bootstrap -->
@@ -12,18 +12,19 @@
 
 <link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
-<script src="/js/lib/jquery.min.js"></script>
-<script src="/js/lib/materialize.min.js"></script>
-<script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/services/requestService.js"></script>
-<script src="/js/controller/infoController.js"></script>
-<script src="/js/services/userInfoService.js"></script>
-
+<script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
+<!-- <script
+	src="https://unpkg.com/vue-resource@1.1.2/dist/vue-resource.min.js"></script> -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script
+	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<body ng-controller="infoController">
-    <div class="container" data-ng-init="getDeliveryRecords()">
+<body>
+    <div id="deliveryRecords" class="container">
 
         <div class="col s12 m8 offset-m2 l6 offset-l3">
             <div class="card-panel grey lighten-5 z-depth-1  waves-effect">
@@ -56,12 +57,12 @@
                         </tr>
                         </thead>
 
-                        <tbody ng-repeat="record in records">
+                        <tbody v-for="record in records">
 
                             <tr>
-                                <td ng-bind="record.bookTitle"></td>
-                                <td ng-bind="record.deliveryDate | date:'yyyy/MM/dd HH:mm:ss'"></td>
-                                <td ng-bind="record.isDelivered | renderStatus"></td>
+                                <td>{{record.bookTitle}}</td>
+                                <td>{{renderDate(record.deliveryDate)}}</td>
+                                <td>{{renderStatus(record.isDelivered)}}</td>
                                 <td>
                                     <a class="waves-effect waves-light btn-small">RESEND</a>
                                     <a class="waves-effect waves-light btn-small">DELETE</a>
@@ -78,5 +79,5 @@
     </div>
 
 </body>
-
+<script src="/js/vue/deliveryRecords.js"></script>
 </html>
