--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -1,71 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="details">
+<html lang="en">
 
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-	<title>TextBook Preview</title>
+<meta charset="UTF-8" />
+<meta name="viewport"
+	content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+<title>TextBook Preview</title>
 </head>
 
-<!-- Loading Bootstrap -->
-<link href="/css/materialize.min.css" rel="stylesheet"/>
-
-<link href="/imgs/favicon.ico" rel="shortcut icon"/>
-
-<script src="/js/lib/jquery.min.js"></script>
-<script src="/js/lib/materialize.min.js"></script>
-<script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/controller/detailController.js"></script>
-<script src="/js/services/detailService.js"></script>
-<script src="/js/services/requestService.js"></script>
-<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
 
 <style>
+body {<!--
+	min-height: 2000px; -->
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+}
 
-      body {
-       <!-- min-height: 2000px;-->
-        width: 100%;
-        height:100%;
-        overflow-x: hidden;
-      }
-
-      #floatBtn {
-      	//opacity:0.7
-      }
-
+#floatBtn { //
+	opacity: 0.7
+}
 </style>
-
+<script
+	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<!-- <script src="/js/lib/jquery.min.js"></script> -->
+<!-- <script
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script> -->
+<script src="/js/lib/materialize.min.js"></script>
 <script>
 	//$(document).ready(function(){
 	//	$('.carousel').carousel();
 	//});
 
-	$(document).ready(function(){
+	/* $(document).ready(function() {
 		// the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
 		$('.modal-trigger').leanModal();
-	 });
+	}); */
 
-	var closeFAB = function(){
+	var closeFAB = function() {
 		//$('.fixed-action-btn').closeFAB();
 	}
+	
+	function popUpCommentModal(id) {
+		$('#'+id+'').openModal();
+	};
 
-
+	function closeFAB() {
+        $('#bottomButton').closeFAB();
+    }
 </script>
 
-<body class="green lighten-5" ng-controller="detailController">
+<body class="green lighten-5">
 
-<!--<div class="carousel">
-	<a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
-	<a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
-	<a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
-	<a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
-	<a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
-</div>-->
-
-<main>
-	<div class="container" data-ng-init="getDetails()">
-		<div ng-repeat="detail in details">
+	<main>
+	<div id="details" class="container">
+		<div v-for="detail in details">
 			<div class="col s12 m7">
 				<!--<h2 class="header">Horizontal Card</h2>-->
 				<div class="card horizontal hoverable">
@@ -74,29 +67,32 @@
 					</div>
 					<div class="card-stacked">
 						<div class="card-content">
-							<b><font size="3px">{{detail.title}}</font></b><br/>
-							<p>
-								作者：{{detail.author}} &nbsp;&nbsp;&nbsp;
-								大小：{{detail.size}}
+							<b>{{detail.title}}</b><br />
+							<p>作者：{{detail.author}} &nbsp;&nbsp;&nbsp; 大小：{{process(detail.size)}}
 							</p>
-							<p>
-								格式：{{detail.format}} &nbsp;&nbsp;&nbsp;
-								发送次数：{{detail.kindleMailTimes}}
-							</p>
+							<p>格式：{{detail.format}} &nbsp;&nbsp;&nbsp;
+								发送次数：{{detail.kindleMailTimes}}</p>
 						</div>
 						<div class="card-action">
-							<a turnToSuccess ng-init="isSendTriggered=false" ng-if="!isSendTriggered" href="###" class="btn-small waves-effect lighten-4 z-depth-0" ng-click="sendMail(detail.id)"><font size="2px">Send To Kindle</font></a>
-							<a href="###" class="modal-trigger btn-small waves-effect lighten-4 z-depth-0" ng-click="popUpCommentModal(detail.id)"><font size="2px">COMMENT</font></a>
+							<a turnToSuccess href="###"
+								class="btn-small waves-effect lighten-4 z-depth-0"
+								v-on:click="sendMail(detail.id)"><font size="2px">Send
+									To Kindle</font></a> <a href="###"
+								class="modal-trigger btn-small waves-effect lighten-4 z-depth-0"
+								onclick="popUpCommentModal(this.name)" :name="detail.id"><font size="2px">COMMENT</font></a>
 
 							<!-- Comments Modal -->
-							<div id="{{detail.id}}" class="modal">
+							<div :id="detail.id" class="modal">
 								<div class="modal-content">
-									<br/><br/><br/>
+									<br />
+									<br />
+									<br />
 									<div class="row">
 										<form class="col s12">
 											<div class="row">
 												<div class="input-field col s12">
-													<textarea id="textarea1" class="materialize-textarea" length="140"></textarea>
+													<textarea id="textarea1" class="materialize-textarea"
+														length="140"></textarea>
 													<label for="textarea1"><b>Comments here : </b></label>
 												</div>
 											</div>
@@ -104,7 +100,9 @@
 									</div>
 								</div>
 								<div class="modal-footer">
-									<a href="#!" class="modal-action modal-close waves-effect btn-flat z-depth-0" type="submit">send</a>
+									<a href="#!"
+										class="modal-action modal-close waves-effect btn-flat z-depth-0"
+										type="submit">send</a>
 								</div>
 							</div>
 							<!-- Modal Structure End -->
@@ -117,36 +115,42 @@
 
 
 		<!-- pagination -->
-		<div align="center">
+		<!-- <div align="center">
 			<ul class="pagination">
 				<li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
 				<li class="active"><a href="#!" ng-click="pagination(1,8)">1</a></li>
-				<li class="waves-effect"><a href="#!" ng-click="pagination(2,8)">2</a></li>
-				<li class="waves-effect"><a href="#!" ng-click="pagination(3,8)">3</a></li>
-				<li class="waves-effect"><a href="#!" ng-click="pagination(4,8)">4</a></li>
-				<li class="waves-effect"><a href="#!" ng-click="pagination(5,8)">5</a></li>
-				<li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+				<li class="waves-effect"><a href="#!"
+					ng-click="pagination(2,8)">2</a></li>
+				<li class="waves-effect"><a href="#!"
+					ng-click="pagination(3,8)">3</a></li>
+				<li class="waves-effect"><a href="#!"
+					ng-click="pagination(4,8)">4</a></li>
+				<li class="waves-effect"><a href="#!"
+					ng-click="pagination(5,8)">5</a></li>
+				<li class="waves-effect"><a href="#!"><i
+						class="material-icons">chevron_right</i></a></li>
 			</ul>
-		</div>
+		</div> -->
 
 	</div>
 
-	<!--<div class="fixed-action-btn" style="top: 20px; right: 28px;">
-		<div class="chip waves-effect z-depth-1">
-			<img src="/imgs/yuna.jpg" alt="Contact Person">
-			Jane Doe
-		</div>
-	</div>-->
 
-	<div class="fixed-action-btn click-to-toggle" id="bottomButton" style="bottom: 110px; right: 28px;" ng-mouseleave="closeFAB()">
-		<a id="floatBtn" class="btn-floating btn-middle red waves-effect z-depth-2">
-			<i class="large material-icons">add</i>
+	<div class="fixed-action-btn click-to-toggle" id="bottomButton"
+		style="bottom: 110px; right: 28px;" onclick="closeFAB()">
+		<a id="floatBtn"
+			class="btn-floating btn-middle red waves-effect z-depth-2"> <i
+			class="large material-icons">add</i>
 		</a>
 		<ul>
-			<li><a class="btn-floating yellow darken-1 z-depth-2" href="toInfo"><i class="material-icons">settings</i></a></li>
-			<li><a class="btn-floating red  waves-effect z-depth-2"><i class="material-icons">message</i></a></li>
-			<li><a class="btn-floating green waves-effect z-depth-2"><i class="material-icons">search</i></a></li>
-			<li><a class="btn-floating blue waves-effect z-depth-2 modal-trigger" href="#bottomModal"><i class="material-icons">live_help</i></a></li>
+			<li><a class="btn-floating yellow darken-1 z-depth-2"
+				href="toDeliveryRecords"><i class="material-icons">settings</i></a></li>
+			<li><a class="btn-floating red  waves-effect z-depth-2"><i
+					class="material-icons">message</i></a></li>
+			<li><a class="btn-floating green waves-effect z-depth-2"><i
+					class="material-icons">search</i></a></li>
+			<li><a
+				class="btn-floating blue waves-effect z-depth-2 modal-trigger"
+				href="#bottomModal"><i class="material-icons">live_help</i></a></li>
 		</ul>
 	</div>
 
@@ -154,7 +158,7 @@
 	<!-- Bottom Modal -->
 	<div id="bottomModal" class="modal bottom-sheet">
 		<div class="modal-content">
-			<h8>Any problems?  Please feel free to let me know.</h8>
+			<h8>Any problems? Please feel free to let me know.</h8>
 			<div class="row">
 				<form class="col s12">
 					<div class="row">
@@ -166,11 +170,17 @@
 			</div>
 		</div>
 		<div class="modal-footer">
-			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat" ng-click="sendProblems()">Send</a>
+			<a href="#!"
+				class=" modal-action modal-close waves-effect waves-green btn-flat"
+				ng-click="sendProblems()">Send</a>
 		</div>
 	</div>
 
-</main>
+	</main>
 
 </body>
+<script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/js/vue/details.js"></script>
+
 </html>
