--- a/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
+++ b/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
@@ -74,8 +74,8 @@ body {<!--
 					<div class="row">
 						<div class="input-field col s12">
 							<i class="material-icons prefix">lock</i> <input
-								placeholder="" id="icon_password" type="password" class="validate"
-								v-model="userInfo.emailPwd"> <label for="icon_password">个人邮箱密码或授权码</label>
+								placeholder="" id="icon_password" type="password" class="validate" v-model="userInfo.emailPwd"> 
+								<label for="icon_password">个人邮箱密码或授权码</label>
 						</div>
 					</div>
 					<div class="row">
@@ -97,13 +97,17 @@ body {<!--
 	</div>
 
 </body>
-
-<script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
-<script
-	src="https://unpkg.com/vue-resource@1.1.2/dist/vue-resource.min.js"></script>
-<script src="/js/vue/infoUpdate.js"></script>
-<script
+<!-- <script type="text/javascript">
+document.write("<scr"+"ipt src=\"https://unpkg.com/vue@2.1.10/dist/vue.min.js\"></sc"+"ript>")
+document.write("<scr"+"ipt src=\"https://unpkg.com/axios/dist/axios.min.js\"></sc"+"ript>")
+document.write("<scr"+"ipt src=\"http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js\"></sc"+"ript>")
+document.write("<scr"+"ipt src=\"https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js\"></sc"+"ript>")
+</script> -->
+<script type="text/javascript"
 	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+<script src="/js/vue/infoUpdate.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 </html>
