--- a/kindlepocket-web/src/main/resources/static/html/register.html
+++ b/kindlepocket-web/src/main/resources/static/html/register.html
@@ -10,8 +10,7 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-<script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 <!-- <script
 	src="https://unpkg.com/vue-resource@1.1.2/dist/vue-resource.min.js"></script> -->
 </head>
@@ -87,20 +86,23 @@ body {<!--
 						class="btn waves-effect waves-light black" @click="register">
 						<font color="white">注册</font>
 					</button>
-					<button type="button" style="float: right; margin-right: 20px"
+					<!-- <button type="button" style="float: right; margin-right: 20px"
 						class="btn waves-effect waves-light black" @click="test">
 						<font color="white">测试</font>
-					</button>
+					</button> -->
 				</form>
 			</div>
 		</div>
 	</div>
 
 </body>
-
-<script src="/js/vue/register.js"></script>
-<script
+<!-- <script src="https://unpkg.com/vue@2.1.10/dist/vue.min.js"></script> -->
+<script type="text/javascript"
 	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script
+<script type="text/javascript" src="/js/vue/vue.min.js"></script>
+<!-- <script type="text/javascript" src="/js/vue/vue-resource.js"></script> -->
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+<script type="text/javascript" src="/js/vue/register.js"></script>
+<script type="text/javascript"
 	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 </html>
