--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -25,12 +25,7 @@ body {<!--
 	opacity: 0.7
 }
 </style>
-<script
-	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<!-- <script src="/js/lib/jquery.min.js"></script> -->
-<!-- <script
-	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script> -->
-<script src="/js/lib/materialize.min.js"></script>
+
 <script>
 	//$(document).ready(function(){
 	//	$('.carousel').carousel();
@@ -179,8 +174,14 @@ body {<!--
 	</main>
 
 </body>
+<script
+	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+<!-- <script src="/js/lib/jquery.min.js"></script> -->
+<!-- <script
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script> -->
+<script src="/js/lib/materialize.min.js"></script>
 <script src="/js/vue/details.js"></script>
 
 </html>
