--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -87,7 +87,8 @@ body {<!--
 				          <!-- <input id="search" type="search"  v-on:blur="toggleSearchBar()" required v-model="searchContent"> -->
 				          <input id="search" type="search" required v-model="searchContent">
 				          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-				          <i class="material-icons" v-on:click="search(searchContent)">trending_flat</i>
+				          <i class="material-icons" v-on:click="search(searchContent)"
+				          	>trending_flat</i>
 				        </div>
 				      </form>
 			    </div>
