Add introduction page

--- a/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
+++ b/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
@@ -46,7 +46,7 @@
         <!-- delivery records -->
         <ul class="collapsible" data-collapsible="accordion">
             <li>
-                <div class="collapsible-header active"><i class="material-icons">filter_drama</i>Delivery Record</div>
+                <div class="collapsible-header active"><i class="material-icons">filter_drama</i>推送记录</div>
                 <div class="collapsible-body">
                     <table class="centered highlight">
                         <thead>
