--- a/kindlepocket-web/src/main/resources/static/html/introduction.html
+++ b/kindlepocket-web/src/main/resources/static/html/introduction.html
@@ -7,13 +7,13 @@
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet"
-	href="/js/vue/materialize.min.css?randomId=<%=Math.random()%>">
+	href="/js/vue/materialize.min.css">
 <title>Introduction</title>
 </head>
 <body>
 
 	<script src="/js/vue/jquery.min.js"></script>
-	<script src="/js/vue/materialize.min.js?randomId=<%=Math.random()%>"></script>
+	<script src="/js/vue/materialize.min.js"></script>
 
 	<div class="container">
 		<div id="popout" class="section scrollspy">
