--- a/kindlepocket-web/src/main/resources/static/html/register.html
+++ b/kindlepocket-web/src/main/resources/static/html/register.html
@@ -5,7 +5,7 @@
 <meta name="viewport"
 	content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="/js/vue/materialize.min.css?randomId=<%=Math.random()%>">
+<link rel="stylesheet" href="/js/vue/materialize.min.css">
 <title>Kindle Pocket</title>
 <!-- Compiled and minified CSS -->
 <!-- <link rel="stylesheet"
@@ -33,7 +33,7 @@ body {<!--
 <body>
 
 	<script src="/js/vue/jquery.min.js"></script>
-	<script src="/js/vue/materialize.min.js?randomId=<%=Math.random()%>"></script>
+	<script src="/js/vue/materialize.min.js"></script>
 	<script src="/js/vue/vue.js"></script>
 	
 	<div id="register">
