--- a/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
+++ b/kindlepocket-web/src/main/resources/static/html/deliveryRecords.html
@@ -7,7 +7,7 @@
     <title>Kindle Pocket</title>
     <!-- <link rel="stylesheet" href="/js/vue/material_icons.css?randomId=<%=Math.random()%>"> -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/js/vue/materialize.min.css?randomId=<%=Math.random()%>">
+    <link rel="stylesheet" href="/js/vue/materialize.min.css">
     <link href="/imgs/favicon.ico" rel="shortcut icon"/>
     <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 </head>
@@ -18,7 +18,7 @@
 <body>
 
 	<script src="/js/vue/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/vue/materialize.min.js?randomId=<%=Math.random()%>"></script>
+	<script type="text/javascript" src="/js/vue/materialize.min.js"></script>
 	<script src="/js/vue/vue.js"></script>
 
     <div id="deliveryRecords" class="container">
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <!-- delivery records -->
+        <!-- delivery records start -->
         <ul class="collapsible" data-collapsible="accordion">
             <li>
                 <div class="collapsible-header active"><i class="material-icons">filter_drama</i>推送记录</div>
@@ -76,6 +76,36 @@
                 </div>
             </li>
         </ul>
+        <!-- delivery records end -->
+        
+        <!-- comments records start -->
+        <ul class="collapsible" data-collapsible="accordion">
+            <li>
+                <div class="collapsible-header"><i class="material-icons">filter_drama</i>评论记录</div>
+                <div class="collapsible-body">
+                    <table class="centered highlight">
+                        <thead>
+                        <tr>
+                            <th data-field="id" width="30%">书名</th>
+                            <th data-field="name" width="30%">时间</th>
+                            <th data-field="price" width="40%">内容</th>
+                        </tr>
+                        </thead>
+
+                        <tbody v-for="comment in comments">
+
+                            <tr>
+                                <td width="30%">{{comment.title}}</td>
+                                <td width="30%">{{renderDate(comment.createdDate)}}</td>
+                                <td width="40%"><font color="#ef6c00">{{comment.content}}</font></td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </li>
+        </ul>
+        <!-- comments records end -->
 
 
     </div>
