--- a/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
+++ b/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
@@ -7,7 +7,7 @@
 	content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-<link rel="stylesheet" href="/js/vue/materialize.min.css?randomId=<%=Math.random()%>">
+<link rel="stylesheet" href="/js/vue/materialize.min.css">
 <title>Kindle Pocket</title>
 <!-- <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"> -->
@@ -39,7 +39,7 @@ body {<!--
 <body>
 
 	<script src="/js/vue/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/vue/materialize.min.js?randomId=<%=Math.random()%>"></script>
+	<script type="text/javascript" src="/js/vue/materialize.min.js"></script>
 	<script src="/js/vue/vue.js"></script>
 
 	<div id="infoUpdate">
